Fixed word wrap bug (CoffeeScript's for loops are too magical) and refactored some more

--- a/source/stylesheets/_main.scss
+++ b/source/stylesheets/_main.scss
@@ -8,6 +8,7 @@ html, body {
   height: 100%;
 }
 body {
+  @include user-select(none);
   background: darken($color-white, 1%);
   font-size: $font-size-base;
   font-family: $font-face-primary;
@@ -17,60 +18,10 @@ body {
   @include transition($transition-speed);
 }
 
-// iOS keyboard
-//------------------------------------------------------------------------
-.ios-keyboard {
-  @include opacity(0);
-  position: fixed;
-  z-index: -1;
-  left: -50%;
-  top: 0;
-  display: block;
-  width: 200%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
-// Canvas menu
-//------------------------------------------------------------------------
-.canvas-menu {
-  position: relative;
-  z-index: 10;
-  left: 0;
-  bottom: 0;
-  display: block;
-  width: 100%;
-  height: 40px;
-  margin: 0;
-  padding: 0;
-  border-top: 1px solid darken($color-white, 15%);
-}
-.focus-toggle {
-  @include transition($transition-speed);
-  @include border-radius(1px);
-  @include box-shadow(0 0 2px lighten($color-black, 25%));
-  background: $color-white;
-  color: transparent;
-  position: absolute;
-  left: 20px;
-  bottom: 13px;
-  display: block;
-  width: 50px;
-  height: 15px;
-  border: none;
-  border-left: 0 solid transparent;
-  border-right: 25px solid darken($color-white, 20%);
-
-  &.on {
-    border-right: 0 solid transparent;
-    border-left: 25px solid $color-ocean-blue;
-  }
-}
-
-// Canvas and descendents
+// Canvas and caret
 //------------------------------------------------------------------------
 .canvas {
+  @include user-select(all);
   @include opacity(0.3);
   @include box-sizing(border-box);
   background: darken($color-white, 1%);
@@ -128,4 +79,55 @@ body {
       -webkit-animation: shake 0.2s linear;
     }
   }
+}
+
+// Canvas menu
+//------------------------------------------------------------------------
+.canvas-menu {
+  position: relative;
+  z-index: 10;
+  left: 0;
+  bottom: 0;
+  display: block;
+  width: 100%;
+  height: 40px;
+  margin: 0;
+  padding: 0;
+  border-top: 1px solid darken($color-white, 15%);
+}
+.focus-toggle {
+  @include transition($transition-speed);
+  @include border-radius(1px);
+  @include box-shadow(0 0 2px lighten($color-black, 25%));
+  background: $color-white;
+  color: transparent;
+  position: absolute;
+  left: 20px;
+  bottom: 13px;
+  display: block;
+  width: 50px;
+  height: 15px;
+  border: none;
+  border-left: 0 solid transparent;
+  border-right: 25px solid darken($color-white, 20%);
+
+  &.on {
+    border-right: 0 solid transparent;
+    border-left: 25px solid $color-ocean-blue;
+  }
+}
+
+// iOS keyboard
+//------------------------------------------------------------------------
+.ios-keyboard {
+  @include opacity(0);
+  position: fixed;
+  z-index: -1;
+  left: -50%;
+  top: 0;
+  display: block;
+  width: 200%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
